--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "babel-node": "babel-node --presets=env",
     "dev": "nodemon --exec npm run babel-node -- ./app.js",
-    "build": "babel src -d dist"
+    "build": "babel src -d dist",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^7.2.7",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^23.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "nodemon": "^1.17.5"
+    "jest": "^23.1.0",
+    "nodemon": "^1.17.5",
+    "regenerator-runtime": "^0.11.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -28,6 +32,8 @@
     "presets": [
       "env"
     ],
-    "plugins": ["transform-object-rest-spread"]
+    "plugins": [
+      "transform-object-rest-spread"
+    ]
   }
 }
