[6] change implementation to serverless. This will not function due to the SDK requiering a RSA as a file. Work will be done to refactor this.

--- a/example.env
+++ b/example.env
@@ -1,4 +1,8 @@
-export production="false"
-export clientID="{some integtrator key}"
-export impersonatedUserID="{some user id}"
-
+export mode=development
+export baseUrl=""
+export oAuthBaseUrl=""
+export oAuthEndpoint=""
+export redirectUri=""
+export integratorKey=""
+export impersonatedUser=""
+export integratorRSAKey=""
