--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "docusign-esign": "^4.0.0"
+    "axios": "^0.18.0",
+    "docusign-esign": "^4.0.0",
+    "jsonwebtoken": "^8.3.0",
+    "moment": "^2.22.2",
+    "qs": "^6.5.2"
   },
   "babel": {
     "presets": [
